Updated Models to match up with the demo jupyter notebook file
Pretty much a complete overhaul of the dataset controller
