# src/SwaggerAPI/swagger_server/controllers/dataset_controller.py
@@ -1,94 +1,22 @@
 import connexion
 import six
 
+from swagger_server.models.api_response import ApiResponse  # noqa: E501
 from swagger_server.models.inline_image import InlineImage  # noqa: E501
 from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
-from swagger_server.models.inline_response2001 import InlineResponse2001  # noqa: E501
 from swagger_server.models.table import Table  # noqa: E501
 from swagger_server import util
 
 
-def dataset_get_candlestick_graph_currency_name_post(currencyName):  # noqa: E501
-    """Returns a candlestick graph of the specified currency
+def dataset_currency_selection_currency_name_post(currencyName):  # noqa: E501
+    """Selects a specific currency type
 
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
+    The currency type should be either bitcoin, bitconnect, dash, ethereum, iota, litecoin, monero, nem, neo, numeraire, omisego, qtum, ripple, stratis, or waves # noqa: E501
 
-    :param currencyName: 
+    :param currencyName: Should be equal to either bitcoin, bitconnect, dash, ethereum, iota, litecoin, monero, nem, neo, numeraire, omisego, qtum, ripple, stratis, or waves
     :type currencyName: str
 
-    :rtype: InlineImage
-    """
-    return 'do some magic!'
-
-
-def dataset_get_cryptocurrency_correlation_graph_get():  # noqa: E501
-    """Send specification about what data to graph
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-
-    :rtype: InlineImage
-    """
-    return 'do some magic!'
-
-
-def dataset_get_graph_close_all_time_get():  # noqa: E501
-    """Returns a graph of all currencies closing values for all days we have data of
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-
-    :rtype: InlineImage
-    """
-    return 'do some magic!'
-
-
-def dataset_get_graph_close_one_year_get():  # noqa: E501
-    """Returns a graph of all currencies closing values for one year
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-
-    :rtype: InlineImage
-    """
-    return 'do some magic!'
-
-
-def dataset_get_graph_graphdata_post(graphdata):  # noqa: E501
-    """Unsupported Method
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-    :param graphdata: 
-    :type graphdata: str
-
-    :rtype: InlineResponse200
-    """
-    return 'do some magic!'
-
-
-def dataset_get_graph_open_close_currency_name_post(currencyName):  # noqa: E501
-    """Produces a graph with a specific currency&#39;s opening and closing values
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-    :param currencyName: 
-    :type currencyName: str
-
-    :rtype: InlineImage
-    """
-    return 'do some magic!'
-
-
-def dataset_get_graph_open_close_high_low_currency_name_post(currencyName):  # noqa: E501
-    """Produces a graph with a specific currency&#39;s opening, closing, high, and low values.
-
-    Sends data about what the graph should show and returns with an image of the graph # noqa: E501
-
-    :param currencyName: 
-    :type currencyName: str
-
-    :rtype: InlineImage
+    :rtype: ApiResponse
     """
     return 'do some magic!'
 
@@ -99,7 +27,7 @@ def dataset_get_stats_get():  # noqa: E501
     Returns values of count, mean, median, mode, min, max, standard deviation (std) for the dataset # noqa: E501
 
 
-    :rtype: InlineResponse2001
+    :rtype: InlineResponse200
     """
     return 'do some magic!'
 
@@ -113,5 +41,70 @@ def dataset_get_table_table_name_post(tableName):  # noqa: E501
     :type tableName: str
 
     :rtype: Table
+    """
+    return 'do some magic!'
+
+
+def dataset_graph_correlation_correlation_type_post(correlationType):  # noqa: E501
+    """Returns a graph utilizing the selected correlation type
+
+    1. Spearman, 2. Pearson, 3. Kendall # noqa: E501
+
+    :param correlationType: information
+    :type correlationType: str
+
+    :rtype: InlineImage
+    """
+    return 'do some magic!'
+
+
+def dataset_graph_selection_graph_selection_post(graphSelection):  # noqa: E501
+    """Selects a graph type
+
+    1. Trend Curve, 2. Candlestick, 3. Correlation Map # noqa: E501
+
+    :param graphSelection: Must be a value equal to 1, 2, or 3
+    :type graphSelection: str
+
+    :rtype: ApiResponse
+    """
+    return 'do some magic!'
+
+
+def dataset_model_type_model_type_post(modelType):  # noqa: E501
+    """Selects a model type
+
+    1. Linear Regression, 2. Support Vector Regression, 3. Multilayer Perceptron # noqa: E501
+
+    :param modelType: Should be a number equal to 1, 2, or 3
+    :type modelType: int
+
+    :rtype: ApiResponse
+    """
+    return 'do some magic!'
+
+
+def dataset_operation_type_operation_type_post(operationType):  # noqa: E501
+    """Selects what operation to do, either training, testing, or prediction
+
+    1. Train, 2. Test, 3. Predict # noqa: E501
+
+    :param operationType: information
+    :type operationType: str
+
+    :rtype: ApiResponse
+    """
+    return 'do some magic!'
+
+
+def dataset_train_currency_name_post(currencyName):  # noqa: E501
+    """Trains based on the currency selected
+
+    Should be either bitcoin, bitconnect, dash, ethereum, iota, litecoin, monero, nem, neo, numeraire, omisego, qtum, ripple, stratis, or waves # noqa: E501
+
+    :param currencyName: Should be equal to either bitcoin, bitconnect, dash, ethereum, iota, litecoin, monero, nem, neo, numeraire, omisego, qtum, ripple, stratis, or waves
+    :type currencyName: str
+
+    :rtype: ApiResponse
     """
     return 'do some magic!'
