# src/SwaggerAPI/swagger_server/models/__init__.py
@@ -4,8 +4,6 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.api_response import ApiResponse
-from swagger_server.models.currency_date_info import CurrencyDateInfo
 from swagger_server.models.inline_image import InlineImage
 from swagger_server.models.inline_response200 import InlineResponse200
-from swagger_server.models.inline_response2001 import InlineResponse2001
 from swagger_server.models.table import Table
