# src/SwaggerAPI/swagger_server/models/currency_date_info.py
@@ -1,116 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class CurrencyDateInfo(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, currency_name: str=None, newest_date: str=None, oldest_date: str=None):  # noqa: E501
-        """CurrencyDateInfo - a model defined in Swagger
-
-        :param currency_name: The currency_name of this CurrencyDateInfo.  # noqa: E501
-        :type currency_name: str
-        :param newest_date: The newest_date of this CurrencyDateInfo.  # noqa: E501
-        :type newest_date: str
-        :param oldest_date: The oldest_date of this CurrencyDateInfo.  # noqa: E501
-        :type oldest_date: str
-        """
-        self.swagger_types = {
-            'currency_name': str,
-            'newest_date': str,
-            'oldest_date': str
-        }
-
-        self.attribute_map = {
-            'currency_name': 'currencyName',
-            'newest_date': 'newestDate',
-            'oldest_date': 'oldestDate'
-        }
-
-        self._currency_name = currency_name
-        self._newest_date = newest_date
-        self._oldest_date = oldest_date
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'CurrencyDateInfo':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The CurrencyDateInfo of this CurrencyDateInfo.  # noqa: E501
-        :rtype: CurrencyDateInfo
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def currency_name(self) -> str:
-        """Gets the currency_name of this CurrencyDateInfo.
-
-
-        :return: The currency_name of this CurrencyDateInfo.
-        :rtype: str
-        """
-        return self._currency_name
-
-    @currency_name.setter
-    def currency_name(self, currency_name: str):
-        """Sets the currency_name of this CurrencyDateInfo.
-
-
-        :param currency_name: The currency_name of this CurrencyDateInfo.
-        :type currency_name: str
-        """
-
-        self._currency_name = currency_name
-
-    @property
-    def newest_date(self) -> str:
-        """Gets the newest_date of this CurrencyDateInfo.
-
-
-        :return: The newest_date of this CurrencyDateInfo.
-        :rtype: str
-        """
-        return self._newest_date
-
-    @newest_date.setter
-    def newest_date(self, newest_date: str):
-        """Sets the newest_date of this CurrencyDateInfo.
-
-
-        :param newest_date: The newest_date of this CurrencyDateInfo.
-        :type newest_date: str
-        """
-
-        self._newest_date = newest_date
-
-    @property
-    def oldest_date(self) -> str:
-        """Gets the oldest_date of this CurrencyDateInfo.
-
-
-        :return: The oldest_date of this CurrencyDateInfo.
-        :rtype: str
-        """
-        return self._oldest_date
-
-    @oldest_date.setter
-    def oldest_date(self, oldest_date: str):
-        """Sets the oldest_date of this CurrencyDateInfo.
-
-
-        :param oldest_date: The oldest_date of this CurrencyDateInfo.
-        :type oldest_date: str
-        """
-
-        self._oldest_date = oldest_date
